--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
                 <th>Species</th>
             </tr>
         </thead>
-        <tbody id="tablaEmpleados">
+        <tbody id="tabla">
         </tbody>
     </table>
 
