Recupera un objeto o personaje identificado por el ObjectId

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,15 @@
     <title>Consumo API</title>
 </head>
 <body>
+    <div>
+        <h1>FILTROS</h1>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Digite el ID</span>
+            <input type="text" class="form-control" placeholder="id" aria-label="id" aria-describedby="basic-addon1" id="id">
+        </div>
+        <button class="btn btn-primary" id="btn-id">Buscar por ID</button>
+    </div>
+    
     <h2 class="text-center">Star Wars</h2>
     <table class="table">
         <thead>
