Recuera uno o varios registros que hacen match con el nombre o parte del nombre.

--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,11 @@
             <input type="text" class="form-control" placeholder="id" aria-label="id" aria-describedby="basic-addon1" id="id">
         </div>
         <button class="btn btn-primary" id="btn-id">Buscar por ID</button>
+
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Digite el Nombre</span>
+            <input type="text" class="form-control" placeholder="Name" aria-label="name" aria-describedby="basic-addon1" id="name">
+        </div>
     </div>
     
     <h2 class="text-center">Star Wars</h2>
