--- a/views/index.html
+++ b/views/index.html
@@ -7,22 +7,29 @@
     <title>Consumo API</title>
 </head>
 <body>
-    <div>
-        <h1>FILTROS</h1>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">Digite el ID</span>
-            <input type="text" class="form-control" placeholder="id" aria-label="id" aria-describedby="basic-addon1" id="id">
-        </div>
-        <button class="btn btn-primary" id="btn-id">Buscar por ID</button>
 
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">Digite el Nombre</span>
-            <input type="text" class="form-control" placeholder="Name" aria-label="name" aria-describedby="basic-addon1" id="name">
+    <div class="container d-flex justify-content-center align-items-center mb-4">
+        <div class="card text-center" style="width: 80%;">
+            <div class="card-header">
+            <h2>FILTROS</h2>
+            </div>
+            <div class="card-body">
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">Digite el ID</span>
+                    <input type="text" class="form-control" placeholder="id" aria-label="id" aria-describedby="basic-addon1" id="id">
+                    <button class="btn btn-primary" id="btn-id">Buscar por ID</button>
+                </div>
+        
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">Digite el Nombre</span>
+                    <input type="text" class="form-control" placeholder="Name" aria-label="name" aria-describedby="basic-addon1" id="name">
+                </div>
+            </div>
         </div>
     </div>
     
     <h2 class="text-center">Star Wars</h2>
-    <table class="table">
+    <table class="table table-striped table-dark">
         <thead>
             <tr>
                 <th>Name</th>
